Fixed contrast

--- a/assets/css/contacts.css
+++ b/assets/css/contacts.css
@@ -73,7 +73,7 @@
 
 .contact-form .field :is(input[type="text"], input[type="email"], textarea)
 {
-    border: 2px solid #777;
+    border: 2px solid #999;
     outline: none;
     width: 100%;
     background-color: transparent;
@@ -106,7 +106,7 @@
 .contact-form .field label
 {
     position: absolute;
-    color: #777;
+    color: #999;
     transform: translateY(-50%);
     top: 50%;
     left: 0.9rem;
